@@ -1,3 +1,7 @@
+2003-10-31  Not Zed  <NotZed@Ximian.com>
+
+	* camel-cms-context.[ch]: removed, now redundant.
+
 2003-10-30  Not Zed  <NotZed@Ximian.com>
 
 	* camel-smime-context.c (sm_get_passwd): implement something basic.
